--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^4.12.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1"
   },
